--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 <body>
 	<h1>Travis CI build stats</h1>
 	<form>
-		<label>Repository:</label>
-		<input id="repo-name" type="text" placeholder="owner/repo" />
+		<label>User or Organization name:</label>
+		<input id="user-name" type="text" placeholder="owner" /><br>
+        <label>
+            <a href="https://github.com/settings/tokens/new">
+            Github API Token</a> (<i>optional</i>):
+        </label>
+        <input type="password" id="ghtoken"/><br>
 		<input class="button" type="submit" value="Render" />
 	</form>
 
